--- a/SmartPendant.ioc
+++ b/SmartPendant.ioc
@@ -170,8 +170,9 @@ PA0-WKUP.GPIO_Label=BTN_USR
 PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPIO_Input
-PA1.GPIOParameters=GPIO_Label
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA1.GPIO_Label=BTN_LEFT
+PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Locked=true
 PA1.Signal=GPIO_Input
 PA10.GPIOParameters=GPIO_Label
@@ -195,8 +196,9 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=ENC_A
 PA15.Locked=true
 PA15.Signal=S_TIM2_CH1_ETR
-PA2.GPIOParameters=GPIO_Label
+PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA2.GPIO_Label=BTN_RIGHT
+PA2.GPIO_PuPd=GPIO_PULLUP
 PA2.Locked=true
 PA2.Signal=GPIO_Input
 PA3.GPIOParameters=GPIO_Label
@@ -235,24 +237,29 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LCD_DC
 PB0.Locked=true
 PB0.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_Label
+PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB1.GPIO_Label=BTN_LD
+PB1.GPIO_PuPd=GPIO_PULLUP
 PB1.Locked=true
 PB1.Signal=GPIO_Input
-PB10.GPIOParameters=GPIO_Label
+PB10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB10.GPIO_Label=BTN_LU
+PB10.GPIO_PuPd=GPIO_PULLUP
 PB10.Locked=true
 PB10.Signal=GPIO_Input
-PB12.GPIOParameters=GPIO_Label
+PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB12.GPIO_Label=BTN_RU
+PB12.GPIO_PuPd=GPIO_PULLUP
 PB12.Locked=true
 PB12.Signal=GPIO_Input
-PB13.GPIOParameters=GPIO_Label
+PB13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB13.GPIO_Label=BTN_RD
+PB13.GPIO_PuPd=GPIO_PULLUP
 PB13.Locked=true
 PB13.Signal=GPIO_Input
-PB14.GPIOParameters=GPIO_Label
+PB14.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB14.GPIO_Label=SDIO_CD
+PB14.GPIO_PuPd=GPIO_PULLUP
 PB14.Locked=true
 PB14.Signal=GPIO_Input
 PB15.Locked=true
