Precise mode for center and edge finder. Bug fixed: if MPG buttons disabled(program executing or probing), physical button will have no effect. Some code optimizations.

--- a/SmartPendant.ioc
+++ b/SmartPendant.ioc
@@ -67,7 +67,7 @@ FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NU
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configMINIMAL_STACK_SIZE=256
 FREERTOS.configTIMER_TASK_PRIORITY=6
-FREERTOS.configTOTAL_HEAP_SIZE=49152
+FREERTOS.configTOTAL_HEAP_SIZE=48128
 FREERTOS.configUSE_APPLICATION_TASK_TAG=1
 FREERTOS.configUSE_MALLOC_FAILED_HOOK=1
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
@@ -142,8 +142,8 @@ Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
-MxCube.Version=6.13.0
-MxDb.Version=DB.6.0.130
+MxCube.Version=6.14.0
+MxDb.Version=DB.6.0.140
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA2_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
@@ -317,6 +317,7 @@ PH1\ -\ OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
