--- a/SmartPendant.ioc
+++ b/SmartPendant.ioc
@@ -86,9 +86,10 @@ Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=FATFS
 Mcu.IP10=TIM2
-Mcu.IP11=USART1
-Mcu.IP12=USB_DEVICE
-Mcu.IP13=USB_OTG_FS
+Mcu.IP11=TIM11
+Mcu.IP12=USART1
+Mcu.IP13=USB_DEVICE
+Mcu.IP14=USB_OTG_FS
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C1
 Mcu.IP4=NVIC
@@ -97,7 +98,7 @@ Mcu.IP6=SDIO
 Mcu.IP7=SPI1
 Mcu.IP8=SYS
 Mcu.IP9=TIM1
-Mcu.IPNb=14
+Mcu.IPNb=15
 Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -135,13 +136,15 @@ Mcu.Pin37=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin38=VP_SYS_VS_Systick
 Mcu.Pin39=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin40=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin40=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM11_VS_NoInput1
+Mcu.Pin42=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=41
+Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
@@ -349,7 +352,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SDIO_SD_Init-SDIO-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,12-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SDIO_SD_Init-SDIO-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,12-MX_TIM11_Init-TIM11-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=120000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -365,25 +368,27 @@ RCC.FamilyName=M
 RCC.HCLKFreq_Value=120000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=150000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.I2SClocksFreq_Value=96000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,PLLCLKFreq_Value,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSource,PLLSourceVirtualString,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
 RCC.PLLCLKFreq_Value=120000000
-RCC.PLLM=25
 RCC.PLLN=240
 RCC.PLLQ=5
 RCC.PLLQCLKFreq_Value=48000000
-RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSE
+RCC.PLLSource=RCC_PLLSOURCE_HSI
+RCC.PLLSourceVirtualString=RCC_PLLSOURCE_HSI
+RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_HSE_DIV25
 RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
-RCC.RTCFreq_Value=32768
-RCC.RTCHSEDivFreq_Value=12500000
+RCC.RCC_RTC_Clock_Source_FROM_HSE=RCC_RTCCLKSOURCE_HSE_DIV25
+RCC.RTCFreq_Value=1000000
+RCC.RTCHSEDivFreq_Value=1000000
 RCC.SYSCLKFreq_VALUE=120000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.VCOI2SOutputFreq_Value=300000000
+RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
-RCC.VCOInputMFreq_Value=1562500
+RCC.VCOInputMFreq_Value=1000000
 RCC.VCOOutputFreq_Value=240000000
-RCC.VcooutputI2S=150000000
+RCC.VcooutputI2S=96000000
 SH.S_TIM1_CH1.0=TIM1_CH1,Output Compare1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
@@ -401,6 +406,9 @@ TIM1.IPParameters=RepetitionCounter,Channel-Output Compare1 CH1,Period,OCMode_1
 TIM1.OCMode_1=TIM_OCMODE_TOGGLE
 TIM1.Period=50
 TIM1.RepetitionCounter=0
+TIM11.Channel=TIM_CHANNEL_1
+TIM11.ICFilter_CH1=0
+TIM11.IPParameters=Channel,ICFilter_CH1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
@@ -415,6 +423,10 @@ VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
+VP_TIM11_VS_NoInput1.Mode=Input_Capture1_from_TI1_REMAP
+VP_TIM11_VS_NoInput1.Signal=TIM11_VS_NoInput1
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
