--- a/SmartPendant.ioc
+++ b/SmartPendant.ioc
@@ -70,7 +70,7 @@ FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NU
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configMINIMAL_STACK_SIZE=128
 FREERTOS.configTIMER_TASK_PRIORITY=6
-FREERTOS.configTOTAL_HEAP_SIZE=58368
+FREERTOS.configTOTAL_HEAP_SIZE=58880
 FREERTOS.configUSE_APPLICATION_TASK_TAG=1
 FREERTOS.configUSE_MALLOC_FAILED_HOOK=1
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
@@ -148,8 +148,8 @@ Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
-MxCube.Version=6.15.0
-MxDb.Version=DB.6.0.150
+MxCube.Version=6.16.0
+MxDb.Version=DB.6.0.160
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA2_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
@@ -314,6 +314,13 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PCC.Checker=false
+PCC.Line=STM32F411
+PCC.MCU=STM32F411C(C-E)Ux
+PCC.PartNumber=STM32F411CEUx
+PCC.Series=STM32F4
+PCC.Temperature=25
+PCC.Vdd=1.7
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
@@ -333,6 +340,7 @@ ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F411CEUx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.3
 ProjectManager.FreePins=false
+ProjectManager.FreePinsContext=
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x0000
 ProjectManager.KeepUserCode=true
@@ -346,7 +354,7 @@ ProjectManager.ProjectFileName=SmartPendant.ioc
 ProjectManager.ProjectName=SmartPendant
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x0020
+ProjectManager.StackSize=0x0080
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
@@ -369,14 +377,13 @@ RCC.HCLKFreq_Value=120000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,PLLCLKFreq_Value,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSource,PLLSourceVirtualString,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,PLLCLKFreq_Value,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSource,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
 RCC.PLLCLKFreq_Value=120000000
 RCC.PLLN=240
 RCC.PLLQ=5
 RCC.PLLQCLKFreq_Value=48000000
 RCC.PLLSource=RCC_PLLSOURCE_HSI
-RCC.PLLSourceVirtualString=RCC_PLLSOURCE_HSI
 RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_HSE_DIV25
 RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
 RCC.RCC_RTC_Clock_Source_FROM_HSE=RCC_RTCCLKSOURCE_HSE_DIV25
@@ -433,4 +440,3 @@ VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
 rtos.0.ip=FREERTOS
-isbadioc=false
